--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,20 +7,6 @@
     android:background="@drawable/popcorn1280"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/bt_mostrar_Peliculas"
-        android:layout_width="379dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="16dp"
-        android:onClick="mostrar_Peliculas"
-        android:text="mostrar Peliculas"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/edt_reg_email"
         android:layout_width="347dp"
@@ -85,7 +71,7 @@
         android:id="@+id/tvLogoApp"
         android:layout_width="296dp"
         android:layout_height="119dp"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="138dp"
         android:layout_marginBottom="82dp"
         android:fontFamily="@font/audiowide"
         android:gravity="center_horizontal|center_vertical"
@@ -95,5 +81,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_mostrar_Peliculas" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Versión Firebase"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.203" />
 </androidx.constraintlayout.widget.ConstraintLayout>
